--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
   --purple: #452367;
   --gray: #2C3E50;
   --green: #4CAF50;
+  --text-shadow: 2px 2px rgba(0,0,0,0.1);
 }
 
 /* Generics */
@@ -61,4 +62,9 @@ p {
 
 .book__title {
   color: var(--purple);
+  text-shadow: var(--text-shadow);
+}
+
+.book__chapter {
+  text-shadow: var(--text-shadow);
 }
