--- a/assets/sass/vars/_colors.scss
+++ b/assets/sass/vars/_colors.scss
@@ -1,9 +1,10 @@
 //-------------
 // Colors
 //-------------
-
-$purple: #452367;
+$purple: #663399;
+$dark-purple: #452367;
 $gray: #2C3E50;
+$ocean-gray: #28496b;
 $dark-gray: #262626;
 $green: #4CAF50;
 $dark-green: #465046;
