--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "CelticMD";
+  src: url("../fonts/celticmd.ttf");
+}
+
+@font-face {
+  font-family: "Great Vibes", cursive;
+  src: url("../fonts/subset-GreatVibes-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat", sans-serif;
+  src: url("../fonts/subset-GreatVibes-Regular.ttf");
+}
+
 /* line 1, assets/sass/lib/_reset.scss */
 html,
 body,
@@ -185,7 +200,7 @@ body {
   position: relative;
   color: #262626;
   background-image: url("../images/ep_naturalwhite.png");
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
   z-index: 1;
@@ -206,7 +221,7 @@ body:after {
 
 /* line 23, assets/sass/_generics.scss */
 h1, h2 {
-  font-family: 'Great Vibes', cursive;
+  font-family: "Great Vibes", cursive;
   text-align: center;
 }
 
@@ -238,9 +253,9 @@ p {
 p::first-letter {
   float: left;
   font-size: 5em;
-  margin: 0.1em 0em 0 0;
+  margin: 0.4em 0 0 0;
   padding: 8px;
-  font-family: 'CelticMD', sans-serif;
+  font-family: "CelticMD";
 }
 
 /* line 57, assets/sass/_generics.scss */
@@ -267,78 +282,91 @@ p::first-letter {
 /* line 7, assets/sass/blocks/_book.scss */
 .book__section {
   text-align: center;
+  padding: 20px;
 }
 
-/* line 11, assets/sass/blocks/_book.scss */
-.book__content {
+/* line 15, assets/sass/blocks/_book.scss */
+.book__wrap {
   max-width: 740px;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 17, assets/sass/blocks/_book.scss */
+/* line 21, assets/sass/blocks/_book.scss */
 .book__title {
-  color: #465046;
+  color: #2C3E50;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
   padding: 40px 0;
 }
 
-/* line 23, assets/sass/blocks/_book.scss */
+/* line 27, assets/sass/blocks/_book.scss */
 .book__chapter {
+  color: #28496b;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
   padding-bottom: 40px;
 }
 
-/* line 28, assets/sass/blocks/_book.scss */
+/* line 33, assets/sass/blocks/_book.scss */
 .book__button {
   margin: 40px 0;
   border: 1px solid #465046;
-  color: #465046;
   padding: 20px;
-  background-color: transparent;
-  transition: .5s background-color ease;
   font-weight: bold;
-}
-
-/* line 37, assets/sass/blocks/_book.scss */
-.book__button:hover {
-  background-color: #465046;
   color: white;
+  background-color: #465046;
+  outline: none;
 }
-
-@font-face {
-  font-family: "CelticMD";
-  src: url("../fonts/celticmd.ttf");
-}
-
 @media (min-width: 640px) {
   /* # */
 }
-
 @media (min-width: 910px) {
   /* # */
 }
-
 @media (min-width: 1140px) {
   /* # */
+  /* line 7, assets/sass/blocks/_book.scss */
+  .book__section {
+    padding: 0;
+  }
+  /* line 33, assets/sass/blocks/_book.scss */
+  .book__button {
+    color: #465046;
+    background-color: transparent;
+    transition: .5s background-color ease;
+  }
+  /* line 47, assets/sass/blocks/_book.scss */
+  .book__button:hover {
+    background-color: #465046;
+    color: white;
+  }
+  /* line 55, assets/sass/blocks/_book.scss */
+  .book__detail {
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.6;
+    background-image: url("../images/thorns.png");
+    -webkit-filter: drop-shadow(2px 4px 6px black);
+            filter: drop-shadow(2px 4px 6px black);
+    z-index: -1;
+  }
 }
-
 @media (min-width: 1420px) {
   /* # */
 }
-
 @media (max-width: 639px) {
   /* # */
 }
-
 @media (max-width: 909px) {
   /* # */
 }
-
 @media (max-width: 1139px) {
   /* # */
 }
-
 @media (max-width: 1419px) {
   /* # */
 }
