--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,12 +270,6 @@ section p:first-of-type::first-letter {
 
 /* line 67, assets/sass/_generics.scss */
 ::-webkit-scrollbar-thumb {
-  background-color: #2C3E50;
-  transition: .5s background-color ease;
-}
-
-/* line 72, assets/sass/_generics.scss */
-::-webkit-scrollbar-thumb:hover {
   background-color: #3e5871;
 }
 
@@ -336,14 +330,15 @@ section p:first-of-type::first-letter {
   .book__button {
     color: white;
     background-color: rgba(0, 0, 0, 0.6);
-    transition: .5s background-color ease;
+    transition: .5s background-color, border ease;
   }
   /* line 50, assets/sass/blocks/_book.scss */
   .book__button:hover {
-    background-color: #465046;
-    color: white;
+    background-color: #ffe352;
+    border: 1px solid #ffe352;
+    color: black;
   }
-  /* line 58, assets/sass/blocks/_book.scss */
+  /* line 59, assets/sass/blocks/_book.scss */
   .book__detail {
     position: fixed;
     bottom: 0;
